scss/partials/_navigation_sidebar.scss
@mixin default-item(){
  background-color: transparent;
  .internal, div.all-activity-label {
    @include avenir_M();
    font-size: 14px;
    line-height: 1.71;
    color: $carrot_light_gray_3;
    text-decoration: none;
  }
}

@mixin item-selected(){
  background-color: rgba($carrot_orange_1, 0.1);
  .internal, div.all-activity-label {
    color: $carrot_orange;
    @include avenir_H();
    font-size: 14px;
    line-height: 1.71;
    text-decoration: none;
  }
}

@mixin item-selected-hover(){
  background-color: rgba($carrot_light_gray_4, 0.2);
  .internal, div.all-activity-label {
    color: $carrot_dark_gray;
    @include avenir_H();
    font-size: 14px;
    line-height: 1.71;
    text-decoration: none;
  }
}

div.left-navigation-sidebar {
  position: absolute;
  position: fixed;
  max-height: calc(100vh - 122px);
  overflow-y: auto;
  overflow-x: visible;
  padding-bottom: 20px;
  width: #{$left_navigation_sidebar_width}px;
  top: 138px;
  left: 0px;
  height: calc(100vh - 138px);

  a.all-activity {
    display: block;
    background-color: transparent;
    border: none;
    outline: none;
    margin-bottom: 44px;
    border-top-right-radius: 3px;
    border-bottom-right-radius: 3px;
    padding-left: 25px;

    &.hover-item{
      @include default-item();

      * {
        cursor: pointer;
      }

      &:not(.item-selected):hover {
        @include item-selected-hover();
      }

      &.item-selected {
        @include item-selected();
      }
    }

    div.all-activity-label {
      padding: 5px 5px 0 5px;
      width: 135px;
      margin-left: 19px;
      text-align: left;
      margin-left: 20px;
    }

    div.all-activity-icon {
      background-image: cdnUrl("/img/ML/activity_hamburger.svg");
      background-size: 12px 12px;
      width: 12px;
      height: 12px;
      float: left;
      margin-left: 4px;
      margin-top: 8px;
    }
  }

  div.left-navigation-sidebar-top{

    .left-navigation-sidebar-top-title {
      padding: 0 0 0 25px;
      margin: 0;
      margin-bottom: 12px;

      span {
        @include avenir_B();
        font-size: 13px;
        color: $oc_gray_7;
        float: left;
        margin-left: 5px;
        cursor: default;
      }

      div.boards-icon, div.stories-icon {
        background-size: 16px 16px;
        width: 16px;
        height: 16px;
        float: left;
        margin-right: 5px;
        margin-top: -3px;
      }

      div.boards-icon {
        background-image: cdnUrl("/img/ML/boards_icon.svg");
      }
      div.stories-icon {
        background-image: cdnUrl("/img/ML/stories_icon.svg");
      }
    }

    button.left-navigation-sidebar-top-title-button {
      width: 20px;
      height: 20px;
      margin-right: 0px;
      margin-top: -5px;
      float: right;
      padding: 0;
      cursor: pointer;
      transition: 230ms;
      background-color: #F0EFEA;
      background-image: cdnUrl("/img/ML/plus_button_icon.svg");
      background-repeat: no-repeat;
      background-position: 50%;
      background-size: 8px 8px;
      border-radius: 2px;
      @include avenir_H();

      &:hover {
        background-color: #3FBD7C;
        background-image: cdnUrl("/img/ML/plus_button_icon_white.svg");
      }
    }
  }

  div.left-navigation-sidebar-items{
    cursor: pointer;
    margin-bottom: 44px;

    div.left-navigation-sidebar-draft-divider {
      width: 96px;
      height: 2px;
      background-color: rgba($carrot_light_gray, 0.3);
      margin: 4px 30px 4px 50px;
    }

    a.left-navigation-sidebar-item {
      display: block;
      cursor: default;
      margin-top: 10px;
      border-top-right-radius: 3px;
      border-bottom-right-radius: 3px;
      padding-left: 20px;

      &.hover-item {
        @include default-item();
        * {
          cursor: pointer;
        }

        &:not(.item-selected):hover {
          @include item-selected-hover();
        }

        &.item-selected {
          @include item-selected();
        }
      }

      img.public {
        float: left;
        margin-left: 6px;
        margin-top: 6px;
        width: 16px;
        height: 16px;
      }

      img.private{
        float: left;
        margin-left: 8px;
        margin-top: 7px;
        width: 10px;
        height: 14px;
      }

      div.board-name {
        margin-left: 25px;

        div.internal {
          padding: 5px 5px 0 5px;
          white-space: nowrap;
          text-overflow: ellipsis;
          overflow: hidden;
          width: 133px;
          float: left;
          cursor: pointer;

          .emojione {
            @include emoji-size(12);
          }
        }
      }
    }
  }

  div.left-navigation-sidebar-footer {
    margin-left: 20px;

    button.about-carrot-btn {
      @include avenir_M();
      margin-top: 10px;
      &:hover {
        text-decoration: underline;
      }

      div.about-carrot-icon {
        background-image: cdnUrl("/img/ML/carrot_grey.svg");
        background-size: 16px 16px;
        width: 16px;
        height: 16px;
        margin-right: 5px;
        float: left;
        margin-top: 1px;
      }

      span {
        margin-left: 5px;
      }
    }

    button.invite-people-btn {
      @include avenir_M();

      &:hover {
        text-decoration: underline;
      }

      div.invite-people-icon {
        background-image: cdnUrl("/img/ML/invite_people.svg");
        background-size: 16px 16px;
        width: 16px;
        height: 16px;
        margin-right: 5px;
        float: left;
        margin-top: 1px;
      }

      span {
        font-size: 14px;
        line-height: 1.71;
        color: $oc_gray_7;
        margin-left: 5px;
      }
    }
  }
}

